--- a/NgheNhacTrucTuyen/Views/login/Login.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/Login.cshtml
@@ -27,7 +27,7 @@
                             <div class="logo">
                                 <i class="fa-solid fa-music fa-3x"></i>
                             </div>
-                            <h1 class="title">COLMUSIC</h1>
+                            <h1 class="title">NGHE NHAC TRỰC TUYẾN</h1>
                             <div class="slogan">Mang lại trải nghiệm mới về âm nhạc</div>
                         </a>
                     </div>
