--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -3,8 +3,8 @@
 @{
     DBcontextDataContext context = new DBcontextDataContext();
 
-    bool islogin = false ;
-    bool adm = false;
+    bool islogin = true ;
+    bool adm = true;
 
 
 }
@@ -85,7 +85,7 @@
                            class="logo WJsKJXEbycxxq8OcGHM1 active"
                            draggable="false"
                            href="/Home/Index">
-                            <img src="~/image/spotify.jpg" class="spotify-logo--text">
+                            <img src="~/image/spotify.jpg" style="width: 100%; height: auto; object-fit: cover;">
                         </a>
                     </div>
                     <ul class="RSg3qFREWrqWCuUvDpJR">
