--- a/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
 
@@ -8,13 +7,114 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COLMUSIC</title>
-    <link rel="icon"
-          href="https://banner2.cleanpng.com/20191001/gc/transparent-musical-note-icon-music-icon-5d93ae3cc2e344.5700187015699594847983.jpg" />
-
+    <title>COLMUSIC - Đăng ký</title>
+    <link rel="icon" href="https://banner2.cleanpng.com/20191001/gc/transparent-musical-note-icon-music-icon-5d93ae3cc2e344.5700187015699594847983.jpg" />
     <link rel="stylesheet" href="~/Content/logincss.css" />
-    <link rel="stylesheet"
-          href="~/fonts/fontawesome-free-6.2.0-web/css/all.min.css" />
+    <link rel="stylesheet" href="~/fonts/fontawesome-free-6.2.0-web/css/all.min.css" />
+
+
+    <style>
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: black;
+            margin: 0;
+            padding: 0;
+        }
+
+        .content-wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .signup-wrapper {
+            display: flex;
+            width: 80%;
+            max-width: 1000px;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .company-details {
+            background-color: #2a2a2a;
+            color: #fff;
+            width: 40%;
+            padding: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .signup-form {
+            width: 60%;
+            background-color: #fff;
+            padding: 40px;
+        }
+
+        .form-title {
+            font-size: 28px;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
+        .content-item {
+            margin-bottom: 20px;
+        }
+
+            .content-item label {
+                font-weight: 600;
+            }
+
+            .content-item input {
+                width: 100%;
+                padding: 10px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                margin-top: 10px;
+            }
+
+        .centered-button {
+            text-align: center;
+        }
+
+        .btn-login, .btn-signup {
+            background-color: #2a2a2a;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+            .btn-login:hover, .btn-signup:hover {
+                background-color: #444;
+            }
+
+        .error-message {
+            color: red;
+            margin-bottom: 15px;
+        }
+
+        .success-message {
+            color: green;
+            margin-bottom: 15px;
+        }
+
+        .signup-text, .login-text {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .signup-link, .login-link {
+            color: #2a2a2a;
+            font-weight: 600;
+            text-decoration: none;
+        }
+    </style>
+
 </head>
 <body>
     <div class="content-wrapper">
@@ -23,53 +123,50 @@
                 <div class="company-details">
                     <div class="shadow"></div>
                     <div class="wrapper-1">
-                        <div class="logo">
-                            <i class="fa-solid fa-music fa-3x"></i>
-                        </div>
-                        <h1 class="title">COLMUSIC</h1>
-                        <div class="slogan">Mang lại trải nghiệm mới về âm nhạc</div>
+                        <a href="/Home/Index" style="text-decoration: none;">
+                            <div class="logo">
+                                <i class="fa-solid fa-music fa-3x"></i>
+                            </div>
+                            <h1 class="title">NGHE NHẠC TRỰC TUYẾN</h1>
+                            <div class="slogan">Mang lại trải nghiệm mới về âm nhạc</div>
+                        </a>
                     </div>
                 </div>
                 <div class="signup-form">
                     <div class="wrapper-2">
                         <div class="form-title">Đăng ký ngay hôm nay</div>
+                        @if (ViewBag.erro != null)
+                        {
+                            <div class="error-message">@ViewBag.erro</div>
+                        }
+                        @if (ViewBag.Success != null)
+                        {
+                            <div class="success-message">@ViewBag.Success</div>
+                        }
                         <div class="form">
                             <form method="post" action="/login/SignUp">
                                 <p class="content-item">
-                                    <label>
-                                        Email
-                                        <input type="email"
-                                               placeholder="vui lòng nhập email"
-                                               name="email"
-                                               required />
-                                    </label>
-                                </p>
-                                @ViewBag.erro
-
-
-                                <p class="content-item">
-                                    <label>
-                                        Mật khẩu
-                                        <input type="password"
-                                               placeholder="Vui lòng nhập mật khẩu"
-                                               name="psw"
-                                               required />
-                                    </label>
+                                    <label>Email</label>
+                                    <input type="email" placeholder="Vui lòng nhập email" name="email" required />
                                 </p>
 
                                 <p class="content-item">
-                                    <label>
-                                        Tên
-                                        <input type="text"
-                                               placeholder="Điền tên sẽ hiện trong hồ sơ của bạn"
-                                               name="ten"
-                                               required />
-                                    </label>
+                                    <label>Mật khẩu</label>
+                                    <input type="password" placeholder="Vui lòng nhập mật khẩu" name="psw" required />
                                 </p>
-                                @ViewBag.Sucess
 
-                                <button type="submit" class="signup">Đăng ký</button>
-                                <a href="/login/Login" class="login">Đăng nhập</a>
+                                <p class="content-item">
+                                    <label>Tên</label>
+                                    <input type="text" placeholder="Điền tên sẽ hiện trong hồ sơ của bạn" name="ten" required />
+                                </p>
+
+                                <div class="centered-button">
+                                    <button type="submit" class="btn-signup">Đăng ký</button>
+                                </div>
+                                <p class="login-text">
+                                    Bạn đã có tài khoản?
+                                    <a href="/login/Login" class="login-link">Đăng nhập ngay</a>
+                                </p>
                             </form>
                         </div>
                     </div>
@@ -77,9 +174,6 @@
             </div>
         </div>
     </div>
-
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
-          rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" />
 </body>
 </html>
-
