--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -79,12 +79,9 @@
             </div>
             <nav aria-label="Chính" class="Root__nav-bar">
                 <div class="tUwyjggD2n5KvEtP5z1B">
-                    <div class="NyIynkmMpZXSoaE3XGhA" role="banner">
-                        <a aria-current="page"
-                           class="logo WJsKJXEbycxxq8OcGHM1 active"
-                           draggable="false"
-                           href="/Home/Index">
-                            <img src="~/image/spotify.jpg" style="width: 100%; height: auto; object-fit: cover;">
+                    <div style="text-align:center; padding-top:10px; padding-bottom:20px">
+                        <a href="/Home/Index">
+                            <img src="/image/spotify.jpg" style="width: 50%; height: auto; object-fit: cover;">
                         </a>
                     </div>
                     <ul class="RSg3qFREWrqWCuUvDpJR">
