--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -79,9 +79,9 @@
             </div>
             <nav aria-label="Chính" class="Root__nav-bar">
                 <div class="tUwyjggD2n5KvEtP5z1B">
-                    <div style="text-align:center; padding-top:10px; padding-bottom:20px">
+                    <div>
                         <a href="/Home/Index">
-                            <img src="/image/spotify.jpg" style="width: 50%; height: auto; object-fit: cover;">
+                            <img src="/image/spotify.gif" style="width: 100%; height: auto;">
                         </a>
                     </div>
                     <ul class="RSg3qFREWrqWCuUvDpJR">
