--- a/NgheNhacTrucTuyen/Views/Home/Index.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <div class="Root__main-view">
     <div class="main-view-container">
         <div class="under-main-view"></div>
