--- a/NgheNhacTrucTuyen/Views/Home/Library.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Library.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
 <div class="Root__main-view">
     <div class="main-view-container">
         <div class="under-main-view"></div>
