--- a/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/Playlist.cshtml
@@ -1,7 +1,9 @@
 ﻿
-    @using Newtonsoft.Json;
+@using Newtonsoft.Json;
 
-
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 <div class="Root__main-view">
     <div class="main-view-container">
         <div class="under-main-view"></div>
@@ -83,7 +85,7 @@
                                                              data-testid="action-bar-row">
                                                             <div class="PFgcCoJSWC3KjhZxHDYH">
                                                                 <button data-testid="play-button"
-                                                                      id="playButton"
+                                                                        id="playButton"
                                                                         class="Button-qlcn5g-0 ktZgWY">
                                                                     <i class="fa-solid fa-circle-play fa-3x"></i>
                                                                 </button>
@@ -120,7 +122,7 @@
                                                          aria-colindex="1"
                                                          aria-sort="none"
                                                          tabindex="-1">
-                                                        
+
                                                     </div>
                                                     <div class="gvLrgQXBFVW6m9MscfFA"
                                                          role="columnheader"
@@ -272,8 +274,8 @@
                                                                             <i class="fa-regular fa-heart"></i>
                                                                         </button>
                                                                         @*<div class="Type__TypeElement-goli3j-0 gPOKDu Btg2qHSuepFGBG6X0yEN">
-                                    3:19
-                                </div>*@
+                                                                                3:19
+                                                                            </div>*@
                                                                         <button type="button"
                                                                                 aria-haspopup="menu"
                                                                                 aria-label="Các tùy chọn khác cho What Makes You Beautiful của One Direction"
@@ -299,7 +301,7 @@
                                                     }
                                                 </div>
 
-                                                <audio id="player" >
+                                                <audio id="player">
                                                     <source src="" type="audio/mpeg">
                                                 </audio>
                                             </div>
@@ -314,7 +316,7 @@
             </div>
         </div>
     </div>
-    
+
 </div>
 <script>
     const playlist = document.getElementById('playlist').children;
@@ -333,8 +335,8 @@
             i
         });
     }
- 
-    
+
+
     // Bắt sự kiện "click" trên nút phát nhạc
     playButton.addEventListener('click', function () {
         if (isPlaying) {
