--- a/NgheNhacTrucTuyen/Views/TheLoai/CreateTL.cshtml
+++ b/NgheNhacTrucTuyen/Views/TheLoai/CreateTL.cshtml
@@ -1,4 +1,7 @@
 ﻿@model NgheNhacTrucTuyen.Models.TheLoai
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <div class="Root__main-view">
     <div class="main-view-container">
