--- a/NgheNhacTrucTuyen/Views/CaSi/CreateCS.cshtml
+++ b/NgheNhacTrucTuyen/Views/CaSi/CreateCS.cshtml
@@ -1,4 +1,7 @@
 ﻿@model NgheNhacTrucTuyen.Models.CaSi
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <div class="Root__main-view">
     <div class="main-view-container">
@@ -9,24 +12,24 @@
         {
             @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h1>Thêm ca sĩ</h1>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <label>Tên ca sĩ</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TenCS, new { htmlAttributes = new { @class = "form-control", required = true } })
-                @Html.ValidationMessageFor(model => model.TenCS, "", new { @class = "text-danger" })
+            <div class="form-horizontal">
+                <h1>Thêm ca sĩ</h1>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label>Tên ca sĩ</label>
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TenCS, new { htmlAttributes = new { @class = "form-control", required = true } })
+                        @Html.ValidationMessageFor(model => model.TenCS, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                @ViewBag.sucess
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn-default" />
+                    </div>
+                </div>
             </div>
-        </div>
-        @ViewBag.sucess
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn-default" />
-            </div>
-        </div>
-    </div>
         }
 
         <div>
