--- a/NgheNhacTrucTuyen/Views/CaSi/EditCS.cshtml
+++ b/NgheNhacTrucTuyen/Views/CaSi/EditCS.cshtml
@@ -1,4 +1,7 @@
 ﻿@model NgheNhacTrucTuyen.Models.CaSi
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <div class="Root__main-view">
     <div class="main-view-container">
