--- a/NgheNhacTrucTuyen/Views/QLBH/Create.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/Create.cshtml
@@ -1,5 +1,8 @@
 ﻿@using NgheNhacTrucTuyen.Models
 
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 <div class="Root__main-view">
     <div class="main-view-container">
