--- a/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/QLBH/DSBaiHat.cshtml
@@ -42,7 +42,7 @@
                                     <td style="vertical-align: middle">@item.CaSi.TenCS</td>
                                     <td style="vertical-align: middle">
 
-                                        <button onclick="EditBH('@item.MaBH')" style="margin-right: 10px;"><i class="fa-solid fa-pen-to-square"></i></button>
+                                        <a onclick="EditBH('@item.MaBH')" style="margin-right: 10px;"><i class="fa-solid fa-pen-to-square"></i></a>
                                         <a href="/QLBH/Detail/@item.MaBH" style="margin-right: 10px;"> Chi tiết</a>
                                         <a href="/QLBH/Delete/@item.MaBH"><i class="fa-solid fa-trash-can"></i></a>
                                     </td>
